# nf

./: .gitignore  Makefile  Makefile.am  README  configure.ac  guile.am
debian/: changelog  control  rules
module/: Makefile.am
module/normalize-rename/: cli.scm  filename.scm  message.scm  program.scm  rename.scm  slug.scm
modules/: Makefile.am
modules/nf/: nf.scm  slug.scm
src/: Makefile.am  nf  normalize-rename  slug.scm
